--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">CS441 - Project 5</string>
+    <string name="app_name">Avoid the Traffic</string>
 </resources>
